# OdooCare

./: .gitignore  Cargo.toml  LICENSE  README.md  gen_icon.py
.github/workflows/: ci.yml  release.yml
src/: App.svelte  app.css  index.html  main.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: IconGenerator.java  icon.icns
src-tauri/src/: dependency_analyzer.rs  main.rs  manifest_parser.rs  odoo17_ce.rs  python_import_checker.rs  zip_handler.rs
